# Drawpile

./: .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  LicenseRef-AppStore.txt  README.md
cmake/: DrawpileCompileOptions.cmake  DrawpileCompilerOptions.cmake  DrawpileDistBuild.cmake  DrawpileFileExtensions.cmake  DrawpileInstallDirs.cmake  DrawpileOptions.cmake  DrawpileTranslations.cmake  (+1 more)
src/dpcore/: Cargo.toml  generate.sh  protocol.yaml  protogen-rust.py
src/dpcore/benches/: brushdabs.rs  rasterops.rs
src/dpcore/examples/: brush_strokes.rs  floodfill_samples.rs  gimp_style_brush.rs  layer_blend_dabs.rs  layer_draw_dabs.rs  layer_drawimage.rs  layer_fillrect.rs  layer_indirect.rs  layerstack.rs
src/dpcore/examples/utils/: mod.rs
src/dpcore/src/: lib.rs
src/dpcore/src/brush/: brushengine.rs  brushstate.rs  classicbrush.rs  mod.rs  mypaintbrush.rs  mypaintbrushstate.rs  mypaintsurface.rs  pixelbrushstate.rs  softbrushstate.rs
src/dpcore/src/canvas/: brushes.rs  compression.rs  history.rs  images.rs  mod.rs  retcon.rs  snapshot.rs  state.rs
src/dpcore/src/paint/: annotation.rs  aoe.rs  bitmaplayer.rs  blendmode.rs  brushmask.rs  color.rs  editlayer.rs  flattenediter.rs  floodfill.rs  grouplayer.rs  idgenerator.rs  image.rs  layer.rs  layerstack.rs  mod.rs  rasterop.rs  rect.rs  rectiter.rs  tile.rs  tileiter.rs  tilevec.rs  timeline.rs
src/dpcore/src/protocol/: message.rs  mod.rs  protocol.yaml  protogen.py  protover.rs  serialization.rs  textmessage.rs  textparser.rs
src/dpcore/tests/: test_messages.rs  test_retcon.rs  test_timeline.rs  test_undo.rs
(+703 files in other folders)
